--- a/.env
+++ b/.env
@@ -3,6 +3,6 @@
 
 
 VITE_API_BASE_URL=https://api.jajamblockprints.com/api
-# VITE_API_BASE_URL=http://192.168.1.6:5007/api
+# VITE_API_BASE_URL=http://localhost:5007/api
 VITE_API_BASE_URL_IMAGE=https://api.jajamblockprints.com
 VITE_REFERENCE_WEBSITE=686f69980a9e01743e29bd4c
