--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ VITE_API_BASE_URL=https://api.jajamblockprints.com/api
 # VITE_API_BASE_URL=http://localhost:5007/api
 VITE_API_BASE_URL_IMAGE=https://api.jajamblockprints.com
 VITE_REFERENCE_WEBSITE=686f69980a9e01743e29bd4c
+
+VITE_GOOGLE_CLIENT_ID=356067358357-j06dk5lpq6gfbka32g5dr9p7r2rrmf1l.apps.googleusercontent.com 
