--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@lottiefiles/dotlottie-react": "^0.13.2",
+        "@react-oauth/google": "^0.12.2",
         "@reduxjs/toolkit": "^2.3.0",
         "axios": "^1.10.0",
         "country-state-city": "^3.2.1",
