--- a/.env
+++ b/.env
@@ -2,9 +2,9 @@
 # VITE_REFERENCE_WEBSITE=686dfb954c94536bd845047f
 
 
-VITE_API_BASE_URL=https://api.jajamblockprints.com/api
-# VITE_API_BASE_URL=http://localhost:5007/api
-VITE_API_BASE_URL_IMAGE=https://api.jajamblockprints.com
-VITE_REFERENCE_WEBSITE=686f69980a9e01743e29bd4c
+# VITE_API_BASE_URL=https://api.jajamblockprints.com/api
+VITE_API_BASE_URL=http://localhost:5007/api
+VITE_API_BASE_URL_IMAGE=http://localhost:5007
+VITE_REFERENCE_WEBSITE=6968869bd31f93ad3cd05004
 
 VITE_GOOGLE_CLIENT_ID=356067358357-j06dk5lpq6gfbka32g5dr9p7r2rrmf1l.apps.googleusercontent.com
