--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@
 
 
 # VITE_API_BASE_URL=https://api.jajamblockprints.com/api
-# VITE_API_BASE_URL=http://localhost:5007/api
-VITE_API_BASE_URL=https://1z0th4tl-5007.inc1.devtunnels.ms/api
+VITE_API_BASE_URL=http://localhost:5007/api
+# VITE_API_BASE_URL=https://1z0th4tl-5007.inc1.devtunnels.ms/api
 
 VITE_API_BASE_URL_IMAGE=https://1z0th4tl-5007.inc1.devtunnels.ms/
 VITE_REFERENCE_WEBSITE=6968869bd31f93ad3cd05004
