--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@
 VITE_API_BASE_URL=http://localhost:5007/api
 # VITE_API_BASE_URL=https://1z0th4tl-5007.inc1.devtunnels.ms/api
 
-VITE_API_BASE_URL_IMAGE=https://1z0th4tl-5007.inc1.devtunnels.ms/
+VITE_API_BASE_URL_IMAGE=http://localhost:5007/
 VITE_REFERENCE_WEBSITE=6968869bd31f93ad3cd05004
 
 VITE_GOOGLE_CLIENT_ID=356067358357-j06dk5lpq6gfbka32g5dr9p7r2rrmf1l.apps.googleusercontent.com
